game in progress

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<canvas id="myCanvas" width="480" height="320"></canvas>
+<canvas id="myCanvas" width="560" height="620"></canvas>
 
 <script>
     const canvas = document.getElementById("myCanvas");
@@ -20,24 +20,219 @@
     let x = canvas.width/2;
     let y = canvas.height-30;
     let dx = 2;
-    let dy = -2;
+    let dy = -3;
+    let ballRadius = 10;
+    let paddleHeitht = 10;
+    let paddleWidth = 75;
+    let paddleX = (canvas.width-paddleWidth)/2;
+    let rigthPressed = false;
+    let leftPressed = false;
+    let brickRowCount = 4;
+    let brickColumnCount = 6;
+    let brickWidth = 75;
+    let brickHeight = 20;
+    let brickPadding = 10;
+    let brickOffsetTop = 30;
+    let birckOffsetLeft = 30;
+    let bricks = [];
+    for (let c=0; c<brickColumnCount; c++) {
+        bricks[c] = [];
+        for (let r=0; r<brickRowCount; r++) {
+            bricks[c][r] = { x: 0, y: 0 , status: 1 };
+        }
+    }
+    let score = 0;
+    let lives = 3;
+    let speed = 0;
+    let level = 1;
 
+    document.addEventListener("keydown", keyDownHandler, false);
+    document.addEventListener("keyup", keyUpHandler, false);
+    document.addEventListener("mousemove", mouseMoveHandler, false);
+
+    function keyDownHandler(e) {
+        if (e.keyCode == 39) {
+            rigthPressed = true;
+        } else if (e.keyCode == 37) {
+            leftPressed = true;
+        }
+    }
+
+    function keyUpHandler(e) {
+        if (e.keyCode == 39) {
+            rigthPressed = false;
+        } else if (e.keyCode == 37) {
+            leftPressed = false;
+        }
+    }
+
+    function mouseMoveHandler(e) {
+        let relativX = e.clientX - canvas.offsetLeft;
+        if (relativX > 0 && relativX < canvas.width) {
+            paddleX = relativX - paddleWidth/2;
+        }
+    }
+   
     function drawBall() {
         ctx.beginPath();
-        ctx.arc(x, y, 10, 0, Math.PI*2);
+        let ball = ctx.arc(x, y, ballRadius, 0, Math.PI*2);
         ctx.fillStyle = "#0095DD";
         ctx.fill();
         ctx.closePath();
     }
 
+    function drawPaddle() {
+        ctx.beginPath();
+        ctx.rect(paddleX, canvas.height-paddleHeitht, paddleWidth, paddleHeitht);
+        ctx.fillStyle = "#0095DD";
+        ctx.fill();
+        ctx.closePath;
+    }
+
+    function drawBricks() {
+        switch (level) {
+            case 1 : brickRowCount + 1;
+            break;
+            case 2 : brickRowCount + 2;
+            break;
+            case 3 : brickRowCount + 3;
+            break;
+        }
+      
+        for (let c=0; c<brickColumnCount; c++) {
+            for (let r=0; r<brickRowCount; r++) {
+                if (bricks[c][r].status == 1) {
+                     let brickX = (c*(brickWidth+brickPadding))+birckOffsetLeft;
+                let brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
+                bricks[c][r].x = brickX;
+                bricks[c][r].y = brickY;
+                ctx.beginPath();
+                ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                ctx.fillStyle = "#0095DD";
+                ctx.fill();
+                ctx.closePath();
+                }
+            }
+        }
+    }
+
+    function collistionDetection() {
+        for (let c=0; c<brickColumnCount; c++) {
+            for (let r=0; r<brickRowCount; r++) {
+                let b = bricks[c][r];
+                if (b.status == 1) {
+                    if (x >b.x && x < b.x+brickWidth && y > b.y && y< b.y+brickHeight)  {
+                        ctx.fillStyle = "yellow";
+                        ctx.fill();
+                        if (dy > 0 ) {
+                            dy = -dy;
+                            if (dy > -15 && dy < 15) {
+                                dy -= 1;
+                            }
+                        } else {
+                            dy = -dy;
+                            if (dy > -15 && dy < 15) {
+                                dy += 1;
+                            }
+                        }
+                        b.status = 0;
+                        score++;
+                        if (score == brickColumnCount*brickRowCount) {
+                            alert("YOU WIN, YOUR SCORE IS : " + score + ". CONGRAT !!!");
+                            document.location.reload();
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    function drawScore() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Score : "+ score, 8, 20);
+    }
+
+    function drawLives() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Lives : " + lives, canvas.width-65, 20);
+    }
+
+    function drawSpeed() {
+        if (dy < 0) {
+            speed = (dy * -1) - 3;
+        } else {
+            speed = dy - 3;
+        }
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Speed : "+ speed, canvas.width/2 + 30, 20);
+    }
+
+    function drawLevel() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Level : "+ level, canvas.width/2 - 100, 20);
+    }
+
     function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawBricks();
         drawBall();
+        drawPaddle();
+        collistionDetection();
+        drawScore();
+        drawLives();
+        drawSpeed();
+        drawLevel();
+
+        //rebound + falling ball
+        if (y + dy < ballRadius) {
+            dy = -dy;
+        } else if  (y + dy > canvas.height-ballRadius) {
+            if (x > paddleX && x < paddleX + paddleWidth) {
+                ctx.fillStyle = "yellow";
+                ctx.fill()
+                dy = -dy;
+                if (dy > -15 && dy < 15) {
+                    dy -= 1;
+                } 
+            } else {
+                ctx.fillStyle = "red";
+                ctx.fill()
+                lives--
+                if (!lives) {
+                    alert("GAME OVER");
+                    document.location.reload();
+                } else {
+                    x = canvas.width/2;
+                    y = canvas.height -30;
+                    dx = 2;
+                    dy = -3;
+                    paddleX = (canvas.width-paddleWidth)/2;
+                }
+                
+            }
+        }
+         if (x + dx < ballRadius || x + dx >canvas.width-ballRadius) {
+        dx = - dx;
+        }
+
+        // paddle displacement
+        if (rigthPressed && paddleX < canvas.width-paddleWidth) {
+            paddleX += 7;
+        } else if (leftPressed && paddleX > 0) {
+            paddleX -= 7;
+        }
+
+        // ball direction
         x += dx;
         y += dy;
-    }
-    setInterval(draw, 10);
-</script>
+        requestAnimationFrame(draw);
+        }
 
+    draw();
+</script>
 </body>
 </html>
